<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/navHome"/>
    <item
        android:id="@+id/nav_itemlist"
        android:icon="@drawable/ic_itemlist"
        android:title="@string/navItemList"/>
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"

        android:title="@string/navAdd"/>
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/navSearch"/>
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/navHistory" />
</menu>