<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/newitemLabel"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#777070"
            android:fontFamily="sans-serif"
            android:text="Новый товар"
            android:textAlignment="center"
            android:textAllCaps="true"

            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Наименование товара"
                    android:maxLength="35"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dp"
                    android:text="Тип товара"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/itemType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/itemTypes" />

                <EditText
                    android:id="@+id/itemCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Количество товара"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/itemVendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Поставщик"
                    android:maxLength="35"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="Описание товара"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/itemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="top|left"
                    android:inputType="textMultiLine|text"
                    android:lines="3"
                    android:maxLength="120"
                    android:maxLines="3"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:gravity="bottom|left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="345dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/newitemPhoto"
                            android:layout_width="211dp"
                            android:layout_height="121dp"
                            android:layout_weight="1"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/processors" />

                        <Button
                            android:id="@+id/chooseItemPhoto"
                            android:layout_width="216dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"

                            android:text="Выбрать фото" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/addItemBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_gravity="bottom"
                        android:layout_marginBottom="20dp"
                        android:onClick="newItemOnClick"
                        android:text="Добавить товар" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>