<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/searchLabel"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#777070"
            android:fontFamily="sans-serif"
            android:text="Поиск"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/searchsortSpinner"
                android:layout_width="324dp"
                android:layout_height="match_parent"
                android:entries="@array/sortTypes" />

            <ImageButton
                android:id="@+id/scanqrBtn"
                android:layout_width="414dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:background="@drawable/qrcodescan"
                android:drawableStart="@drawable/qrcodescan"
                android:scaleType="fitXY"
                tools:src="@drawable/qrcodescan" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/searchsearchEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:hint="Поиск по названию/описанию" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="430dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.example.warehouseproject.customForms.ExpandableHeightGridView
                    android:id="@+id/searchehGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchprevBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Пред страница" />

            <Button
                android:id="@+id/searchnextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="След страница" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>