<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/darker_gray"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemlistLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Комплектующие для ПК"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.warehouseproject.customForms.ExpandableHeightGridView
                android:id="@+id/itemsGridView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:horizontalSpacing="4dp"
                android:isScrollContainer="false"
                android:numColumns="2"

                android:stretchMode="columnWidth"
                android:verticalSpacing="4dp" />

        </ScrollView>
    </LinearLayout>
</RelativeLayout>